--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             <p>Made With Montagab AL_Hamawy</p>
             <div class="social">
                 <div>
-                    <a href="https://www.facebook.com/montagab.alhamoy" class="facebook">
+                    <a href="https://www.facebook.com/montagab.alhamawy" class="facebook">
                         <i class="fab fa-facebook-f fa-2x"></i>
                     </a>
                 </div>
